fix KeyFeature-s text bottom spacing

--- a/components/key-feature/key-feature.scss
+++ b/components/key-feature/key-feature.scss
@@ -31,3 +31,9 @@
     }
   }
 }
+
+.key-feature-text {
+  > :last-child {
+    margin-bottom: 0;
+  }
+}
